I believe I fixed the add form issue where the comments weren't adding as empty values if they didn't put one. I also got the delete post, edit post, and delete ratee working. Permissions are set so they're only visible when it makes sense for them to be so.

--- a/CSS/Search_Rate_My_Date.css
+++ b/CSS/Search_Rate_My_Date.css
@@ -38,6 +38,45 @@ body {
 	padding-bottom: 10px;
 }
 
+
+table, th, td {
+	border: 1px solid black;
+	color: black;
+	text-align: center;
+}
+
+th:nth-child(even) {
+	background-color: lightgreen;
+}
+
+th:nth-child(odd) {
+	background-color: lightblue;
+}
+
+td {
+	background-color: #FF7F50;
+}
+
+.raterAndDate {
+	width: 100%;
+	background-color: white;
+}
+
+#searchForm {
+	position: absolute;
+	left: 75px;
+	width: 100%;
+}
+
+#commentSeparator {
+	border-top: 5px solid black;
+}
+
+.searchSubmitButtons {
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
 a:link {
 	color: white;
 }
